--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,34 +7,33 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-color: #1c5380;
-  
+  background-color: #1c5380;  
 }
 
 main {
+  margin: 1px 20px 1px 40px;
+  border: 20px;
+  padding: 20px 40px 20px 100px;
   display: flex;
+  flex-direction:row;
   justify-content: center;
   align-items: center;
-  
-}
 
-.general-content {
-  display: flex;
-  justify-content: center;
 }
 
 h1 {
   color: #06365f;
-}
-
-ul {
-  display: inline;
-  justify-content: center;
-  align-items: baseline;
 
 }
 
-.log-btn {
-  width: 40px;
-  height: 40px;
+.text-content {
+  border: 10px;
+  padding: ;
+  background-color: white;
+  font-size: 17px;
+
+}
+
+span {
+  font-weight: 600;
 }
