--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,65 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+}
+
+p {
+  margin-bottom: 10px;
+}
+
+#parte-arriba{
+  width: 100%;
+  display: flex;
+  margin-top: 100px;
+}
+
+#telefonos{
+  width: 270px;
+  margin-left: 280px;
+}
+
+#telefonos img {
+  display: block;
+  width: 270px;
+}
+
+#resto {
+  width: 35%;
+  margin-left: 100px;
+  margin-top: 15px;
+}
+
+#resto header {
+  background-color: blue;
+  display: flex;
+}
+
+#log-in {
+  margin-top: 30px;
+  margin-left: 80px;
+}
+
+#restodiv {
+  background-color: white;
+  padding: 20px 15px 10px 15px;
+}
+
+#restodiv h1{
+  color: blue;
+  font-weight: 800;
+  width: 50%;
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+footer{
+  margin: 30px auto;
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer button{
+  color: blue;
 }
