--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,15 +10,96 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+}
+section.mainSection{
+  height:500px;
+    display: flex;
+    /*justify-content: center;*/
+    align-items: flex-start;
+    margin: 100px 60px 40px 200px;
+  }
+section.mainSection>section.rightSection{
+height: 275px;
+display: flex;
+flex-direction: column;
+}
+section.mainSection>section.rightSection>section.topRight{
+height: 275px;
+display: flex;
+flex-direction: row;
+align-items: center;
+}
+section.topRight>button.logIn{
+height: 35px;
+background-image: linear-gradient(#1c5380, #06365f);
+text-align: center;
+border: 1px solid #001f3a;
+box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+color: white;
+text-decoration: none;
+font-size: 14px;
+text-align: center;
+font-weight: bold;
+margin-left:100px;
+}
+section.rightSection{
+  margin-left: 40px;
+  
+}
+section.middleRight{
+  width:500px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  height: 500px;
+  margin: 15px 0px 20px 5px;
+  padding: 30px 0px 10px 25px;
 }
 
-section.mainSection{
-  height: 750px;
+section.middleRight>h2{
+  font-weight: bold;
+  color: #06365f;
+  font-size: 20px;
+  width: 210px;
+}
+section.middleRight>p>strong{
+  font-weight: bold;
+}
+section.middleRight>p {
+  font-size: 16px;
+  margin: 10px 0px;
+  text-align: justify;
+  width: 400px;
+   
+}
+section.bottomRight{
+  display:flex;
+   margin: 10px 0px 0px 30px;
+}
+div.ios{
+  margin: 10px;
+}
+div.android{
+  margin: 10px;
+}
+
+div.bottomPage {
+  height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url();
-    background-size: cover;
-    background-position: center;
-
+    }
+div.bottomPage{
+  font-weight: bold;
+  text-decoration:none;
+}
+div.bottomPage>ul>li{
+  display: inline;
+  padding: 8px;
+}
+div.bottomPage>ul{
+  text-decoration: none;
+}
+div.copyright{
+  color:grey
 }
