--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,15 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #06365f;
+}
+
+div.image-phone {
+  padding: 10%;
+  background-color:;
+}
+
+div.logo-istagram-image {
+  background-color;
+  wrapper
 }
