Final por hoy :(

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,53 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+ 
+}
+
+section {
+  display: flex;
+  margin: 100px 200px;
+}
+
+.phones{
+  margin-right:200px;
+}
+
+.login{
+  text-decoration: none;
+  color:white;
+  text-align: center;
+  background-image:linear-gradient(to top, #06365f,#1c5380);
+  border: 1px solid black;
+  
+}
+
+.text{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;  
+  padding: 10px 20px; 
+}
+span{
+  font-weight: bold;
+}
+
+h2{
+  color:#06365f;
+  font-size: 1.8em;
+}
+
+footer {
+  color:grey;
+  font-weight: bold;
+  display:flex;
+  justify-content: center;
+}
+footer a{
+  text-decoration: none;
+  color: #1c5380;
+  margin-right: 10px;
 }
