--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,71 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  text-decoration: none;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+h2 {
+  font-size: 2em;
+  color: #06365f;
+}
+.up {
+  padding-bottom: 25px;
+}
+.container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 900px;
+}
+.phones {
+  padding-left: 50px;
+  width: 400px;
+}
+.brand {
+  width: 500px;
+  background-image: none;
+}
+.brand a {
+  margin-bottom: 25px;
+  text-decoration: none;
+}
+.text {
+  background-image: url(../images/frame.png);
+  box-sizing: border-box;
+  background-size: cover;
+  width: 500px;
+  padding-top: 35px;
+  padding-left: 50px;
+  
+}
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 900px;
+  padding-left: 50px;
+}
+footer ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  
+  
+}
+footer ul li {
+  text-decoration: none;
+  padding-right: 15px;
+  color: #06365f;
+
+}
+.buttons {
+  padding-left: 50px;
+}
+.list {
+  list-style-type: none;
 }
