un pequeño cambio en la alineacion de la img principal

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -16,13 +16,10 @@ body {
 }
 
 main{
+  align-items: center;
   display: flex;
   justify-content: space-evenly;
   margin: 80px;
-}
-
-main img{
-  height: 100%;
 }
 
 .content{
