--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,3 +15,13 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.info{
+  display: flex;
+  flex-direction: column;
+  align-items: initial;
+  justify-content: center;
+  width: 500px;
+  padding: 50px;
+  margin: 50px;
+}
