--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,39 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.mobile{
+  width: 250px;
+  height: 500px;
+  display: block;
+  margin-left: 10%;
+  float: left;
+}
+
+.insta{
+  width: 460px;
+  height: 180px;
+  display: block;
+  margin-left: 12%;
+  float: left;
+}
+
+.login{
+  width: 130px;
+    height: 59px;
+    display: block;
+    margin-left: 1%;
+    float: left;
+}
+
+.global{
+  background: white;
+    margin-top: 10%;
+}
+
+.loginBtn{
+  background: url(images/home.png) no-repeat;
+  width: 100%;
+    height: 100%;
+    background-color: steelblue;
+}
