--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,45 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  grid-auto-rows: 200px;
+  
 }
+
+.two-blocks {
+  display: flex;
+  justify-content: space-between;
+}
+
+.blockTwo {
+  margin: 200px;
+  width: 40%;
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.home {
+  margin: auto;
+  background-size: 40%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+p {
+  border: 1px solid red;
+  text-align: justify;
+}
+.container {
+  background-image: url(/starter-code/images/frame.png);
+  background-repeat: no-repeat;
+  
+  
+}
+
+li {
+  clear: both;
+  text-align: center;
+}
+
