--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,105 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.background-page { 
+  background-repeat: repeat-x;
+  background-image: url('../images/bgtile.png');
+}
+
+.flexbox { 
+  display: flex;
+  flex-direction: row;
+  padding: 100px;
+}
+footer {
+  margin-bottom: 3px;
+  list-style: none;
+  flex-direction: column;
+  font-size: 0.6em;
+  margin-left: 40em;
+  margin-bottom: 6em;
+}
+ 
+li {
+  margin-bottom: 7px;
+  margin-right: 16px;
+  text-transform: uppercase;
+  display: inline-block;
+}
+
+h1 {
+  color: #06365f;
+  padding-bottom: 15px;
+}
+a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+}
+form a {
+  color: white;
+  
+}
+.position-form {
+  justify-content: right;
+  display: flex;
+  margin-left: 30px;
+  padding: 30px 30px;
+
+}
+
+span {
+  font-weight: bold;
+}
+
+p {
+  color: #3B3D3D;
+  padding-bottom: 15px;
+}
+
+.box-white {
+  background: white;
+  margin-left: 60px;
+  padding: 30px 30px;
+  border-radius: 4px;
+  justify-content: left;
+  box-shadow: 2px 2px 10px #666; 
+}
+
+.box-log {
+  text-align: center;
+  background: rgba(147,206,222,1);
+  background: -moz-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 0%, rgba(28,83,128,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(147,206,222,1)), color-stop(0%, rgba(117,189,209,1)), color-stop(100%, rgba(28,83,128,1)));
+  background: -webkit-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 0%, rgba(28,83,128,1) 100%);
+  background: -o-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 0%, rgba(28,83,128,1) 100%);
+  background: -ms-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 0%, rgba(28,83,128,1) 100%);
+  background: linear-gradient(to bottom, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 0%, rgba(28,83,128,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#1c5380', GradientType=0 );
+  padding: 7px 7px;
+  margin-left: 16em;
+  border-radius: 4px;
+  height: 35px;
+  
+}
+
+.buttom {
+  display: flex;
+  margin-left: 30px;
+  align-items: baseline;
+  
+}
+.space-buttom {
+  margin-right: 25px;
+  margin-top: 18px;
 }
