--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,115 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+#background {
+  background-image: url("../images/bgtile.png");
+  width: 100%;
+  height: 20vh;
+  padding-top: 12%;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  margin-top: 0%;
+  margin-bottom: 5%;
+}
+
+.top {
+  display: flex;
+}
+
+.left {
+  margin-left: 15%;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2vw;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
+}
+
+footer {
+  width: 50vw;
+  margin: 10vh 22vw;
+  margin-bottom: 5vh;
+  font-size: 0.8em;
+}
+
+footer ul{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+footer li,a {
+  list-style: none;
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 15;
+}
+
+
+section {
+  width: 45vw; 
+  height: 55vh;
+  background-image: url("../images/frame.png");
+  background-size: 45vw 55vh;
+}
+
+section > p >span {
+  font-weight: 10; 
+}
+
+section > h3 {
+  font-size: 1.6em;
+  width: 42%;
+  color:#06365f;
+}
+
+section > p {
+  width: 80%;
+  font-size: 1.2em;
+}
+
+section > p,h3 {
+  margin-left: 5vh;
+}
+
+section > div {
+  margin-top: 2vh;
+  margin-left: 5vh;
+}
+
+section > div > img {
+  margin-right: 20px;
+}
+
+#copyright {
+  color: rgb(122, 121, 121);
+  font-weight: 10;
+}
+
+header > button {
+  width: 15%;
+  display: flex;
+  border: 2px solid #216097;
+  background-image: linear-gradient(#5e8baf, #2868a0);
+  align-items: center;
+  margin-left: 15vw;
+  border-radius: 2px;
+  height: 58%;
+}
+
+header > button > p {
+  color: white;
+  font-size: 1.3em;
+  margin-left: 10px;
+  font-weight: 500;
 }
