--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,36 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom, #1c5380,#1c5380 ) ,linear-gradient(to bottom, white,white );
+
+  position: 0 0, 50vh 100vh;
+ }
+
+#bodybackground {
+ 
+  position: fixed;
+  top: 40vh;
+  bottom: 100vh;
+  width: 100%;
+  height: 50%;
+
 }
+h1{
+  color: #06365f;
+}
+
+div{
+  position: fixed;
+  left: 20vw;
+  right: 20vw;
+  top: 100px;
+}
+#left-image{
+  position: relative;
+  float: left;
+}
+#right-content{
+  align-content: center;
+}
+footer{
