--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,150 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  margin:0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.fondo-azul {
+  background-image: url("../images/bgtile.png");
+  height: 300px;
+}
+.img-home{
+  height: auto;
+  width: 25px;
+  margin-right:10px;
+}
+/********/
+.container2 {
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  margin-top:-220px;
+}
+.tarjeta-padre {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 30%;
+  margin-left: 9%;
+}
+.tarjeta {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  padding: 30px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  border-top-left-radius: 5px;
+  background-color: white;
+}
+.img-cel {
+  width: 21%;
+}
+.login  {
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 8px 0 67px 0;
+  height: 80px;
+}
+#log{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:white;
+  width: 130px;
+  border: 1px solid gray;
+  margin-left: 30px;
+  background-color: #3a6890;
+  opacity: 10%;
+  font-size: 16px;
+  height: 50px;
+  padding: 9px 0 1px 0;
+  border-radius: 7px 7px 7px 7px;
+}
+.texto {
+  width: 100%;
+  line-height: 26px;
+}
+.titulo {
+  width: 55%;
+  padding-left: 9px;
+  color: #06365f;
+  
+}
+.parrafo {
+  padding: 10px;
+}
+.stores {
+ padding:30px 0 0 9px; 
+}
+.tiendas{
+  height: auto;
+  padding-right: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 170px;
+}
+#bar-inf {
+  right: 10px;
+  top: 30px;
+  padding: 0;
+}
+li {
+  list-style: none;
+  display: inline-block ;
+  box-sizing: border-box;
+  margin-left: 10px ;
+  color: #06365f;
+}
+li:hover {
+  cursor: pointer;
+  border-bottom: 2px solid slategray;
+}
+@media (max-width: 768px) {
+  .container2 {
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+  .img-cel{
+    width: 65%;
+  }
+  .tarjeta-padre{
+    width: 90%;
+  }
+  .tarjeta{
+    width: 80%;
+  }
+  li {
+    display: block ;
+  }
+  .login{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 90%;
+    padding: 50px 0 60px 0;
+  }
+  .footer{
+    height: 260px;
+  }
+  .stores {
+    display: flex;
+    justify-content: center;
+  }
+  #log{
+    margin-left: 50%;
+  }
 }
