--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,101 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+padding:0;
+margin:0;
+
+}
+
+#Brand{
+  position: absolute;
+  top: 20%;
+  right: 44%;
+  
+}
+header {
+background-image: url('/Users/franciscoep/Documents/WebDevBootCamp/lab-css-instagram-clone/starter-code/images/bgtile.png');
+width: 100%;
+height: 300px;
+}
+.logContainer{
+  padding-top: 20px;
+}
+
+h1{
+  position: absolute;
+  top: 30%;
+  left: 35%;
+  color: #06365f;
+  display: flex;
+  justify-content: center;
+  font-size: 1.7em;
+  
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+} 
+
+.boton{
+  width: 100px;
+  height: 30px;
+  background-color: lightblue;
+  border-radius: 7px;
+  background-image: url("/Users/franciscoep/Documents/WebDevBootCamp/lab-css-instagram-clone/starter-code/images/home.png");
+  background-repeat: no-repeat;
+  font-size: 1.2em;
+  position: absolute;
+  top:23%;
+  left:58%;
+  color: white;
+
 }
+
+#iphone {
+  padding-left: 10%;
+  padding-top: 40px;
+  
+}
+
+section{
+  margin-left: 30%;
+  margin-right: 30%;
+  
+}
+
+.lista{
+  display: flex;
+  justify-content:space-around;
+  list-style: none;
+  padding-top: 15%;
+  padding-left: 25%;
+  padding-right: 25%;
+  color: #06365f
+  
+}
+
+footer{
+  margin:0;
+  padding:0;
+ 
+}
+
+  
+p{
+  text-decoration: none;
+  text-align: center;
+  padding-left: 35%;
+  padding-right: 30%;
+}
+
+
+.contenedor{
+  display:flex;
+  justify-content:flex-end;
+  background-image: url("../images/frame.png");
+  height: 200px;
+
+}
+
+
