--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,123 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin:0;
+  padding: 0;
+}
+
+html {
+  font-size: 16px;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+p {
+  padding: 2% 0;
+}
+
+.main{
+
+}
+
+.background{
+  display: inline-block;
+  background-image: url("../images/bgtile.png");
+  width: 100%;
+  height: 300px;
+}
+.main-container{
+  max-width: 1300px;
+  margin: 10% ;
+  line-height: 1.65;
+  
+  /* padding: 10%; */
+
+  /* padding: 10% 10% 10% 5%;
+  width: 100%;
+  height: 100%; */
+  /* align-items: center;
+  justify-content: center; */
+  /* flex-flow: row wrap; */
+  /* align-content: flex-end; */
+}
+.main-card-1{
+  box-sizing: border-box;
+  flex-basis: 30%;
+  align-items: stretch;
+}
+.main-card-2{
+  box-sizing: border-box;
+  flex-basis: 60%;
+}
+
+@media (min-width: 1000px){
+  .main-container{
+    display: flex;
+    justify-content: space-between;
+  }
+} 
+
+.brand-nav{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url("../images/bgtile.png");
+}
+
+.home {
+  display: flex;
+  
+}
+
+.log-in {
+  padding-left: 15px;
+}
+
+.log-in p {
+  color: white;
+  font-weight: bold;
+}
+
+
+.stores{
+  padding: 5% 2%;
+}
+
+.apple-store{
+  display: inline;
+  padding-right: 4%;
+}
+
+.play-store {
+  display: inline;
+} 
+
+.contact{
+  max-width: 1400px;
+  align-content: center;
+}
+
+.info{
+  margin: 5% 10%;
+  padding-left: 10%;
+  
+}
+
+.info li,a{
+  display: inline;
+  padding: 5px;
+  list-style: none;
+  text-decoration: none;
+  color: rgb(0, 132, 255);
+  font-weight: bold;
+}
+
+.copy-right{
+  color: rgb(171, 179, 187);
 }
