--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,63 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+section{
+  height:300px ;
+}
+#fondo{
+  background-color: #1c5380;
+  height: 300px;
+  
+}
+h2{
+  color:#06365f;
+}
+
+.imagePhone-frente{
+  position: absolute;
+   z-index: 1px;
+    top: 130px;
+    left: 180px;
+    width: 400px;
+    height: 400px;
+  }
+.card{
+    position: absolute;
+    z-index: 1px;
+    background-color: white;
+    top: 230px;
+    left: 550px;
+    width: 500px;
+    height: 450px;
+    border-radius: 8px;
+  }
+  .card-content{
+   margin: 30px;
+  }
+  .card-content-images{
+    margin: 30px;
+  }
+  
+  .margin-lista{
+    margin-top: 380px;
+    margin-left: 300px;
+  }
+
+.lista ul
+{
+   padding-right: 0px;
+   padding-left: 0px;
+   padding-bottom: 0px;
+   padding-top: 0px;
+   margin: 0px;
+   
+}
+.lista li
+{
+  
+   display: inline;
+   padding-right: 5px;
+   list-style:none;
+ 
+}
