--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,41 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+.instagramlogo {
+  position: relative;
+  width: 100%;
+  background-image: linear-gradient(#1c5380, #06365f); 
+  height: 300px;
+  
+}
+
+#logo {
+    position: absolute;
+    right: 350px;
+    top: 100px;
+  }
+
+button {
+    position: absolute;
+    right: 200px;
+    top: 120px;
+    background-image: linear-gradient(#1c5380, #06365f, #1c5380);
+    border: 0;
+    text-align:center;
+}
+
+#logo {
+  text-align: center;
+  color: #06365f;
+}
+
+
+footer {
+  color: #06365f;
+  position: relative;
+  text-align: center;
+  top: 330px;
+  font-style: bold;
+}
