--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,109 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+body > section,
+footer {
+  width: 860px;
+}
+
+body > section {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 80px;
+}
+
+.content {
+  margin-left: 60px;
+}
+
+header {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header button {
+  border: 1px solid #06365f;
+  background-color: #1c5380;
+  color: white;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px 12px;
+  border-radius: 4px;
+}
+
+header button img {
+  margin-right: 8px;
+}
+
+main {
+  background-color: white;
+  padding: 32px;
+  margin-top: 16px;
+  border-radius: 4px;
+}
+
+h1 {
+  margin: 0%;
+  color: #06365f;
+  font-size: 150%;
+}
+
+.download-buttons {
+  margin-top: 32px;
+}
+
+.download-buttons a {
+  margin: 0 8px;
+}
+
+footer {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer ul {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+footer li {
+  margin: 4px;
+}
+
+footer li a {
+  padding: 4px;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 80%;
+}
+
+.copyright {
+  text-transform: uppercase;
+  color: gray;
+  font-weight: bold;
+  font-size: 80%;
 }
