--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,107 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+ 
+}
+
+#ya {
+  margin:-200px 0px;
+}
+
+
+.insta {
+  display: flex;
+  margin:0px auto;
+  align-items: center;
+  padding:10px 150px 0px 150px;
+  position:relative;
+ 
+}
+
+#insta-left {
+  margin:0 auto;
+}
+
+#insta-right {
+  margin:0 auto; 
+}
+
+#i-phone {
+  margin-bottom:30px;
+}
+
+#insta-right button {
+  background-color:#1c5380;
+  color:white;
+  font-weight:300;
+  text-align: center;
+  font-size:1rem;
+  padding:5px 20px 15px 20px;
+  margin-left:45px;
+margin-bottom:20px;
+}
+
+#home-button {
+ margin-bottom:-5px;
+}
+
+
+#insta-right img {
+  padding:10px 10px 0px 0px;
+}
+
+#insta-logo {
+  margin-bottom:-25px;
+}
+
+#new {
+  margin:0 auto;
+  padding: 50px;
+  background: url('../images/frame.png') no-repeat;
+  background-size: contain; 
+  border-radius: 10px;
+}
+
+#new h1 {
+  color: #06365f;
+  font-size:1.5rem;
+  width:250px;
+  margin:0;
+}
+
+#insta-right {
+width:500px;
+}
+
+#insta section img {
+  display: block;
+  
+}
+
+footer {
+  margin: 60px auto;
+  width:700px;
+}
+
+footer ul {
+  display:flex;
+  list-style-type: none;
+  text-align: center;
+   
+}
+
+footer ul li {
+  padding: 5px;
+  text-align: center;
+  margin: 0 auto;
+  color: #1c5380; 
+  font-weight:400;
+}
+
+#bg {
+  background-color:  #1c5380;
+  height:300px;
+  width:100%;
+  
 }
