--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,51 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.hero {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+  background-size: cover;
+  height: 40vh;
+  margin-bottom: -100px;
+}
+.hero-content {
+  padding-top: 150px;
+  padding-left: 5vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 40vw;
+}
+.hero-img {
+  float: left;
+  position: relative;
+  margin: 5vw;
+  top: 100px;
+  left: 5vw;
+}
+.hero-logo {
+  align-self: flex-end;
+}
+.login {
+  background-color: #1c5380;
+  color: white;
+  padding: .5%;
+  text-align: center;
+}
+.card {
+  background-image: url(../images/frame.png);
+  background-size: cover;
+  width: 40vw;
+  float: left;
+  display: flex;
+  flex-direction: column;
+  padding: 2%;
+  margin-left: 5vw;
+}
+footer {
+  display: flex;
+  min-width: 50vw;
+  justify-content: center;
+  padding-top: 10vh;
+}
