--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,49 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.flex-container {
+  display: flex;
+  /* background: linear-gradient(#1c5380, #1d527e); */
+  background-image: url("../images/bgtile.png") ;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  /* background-position: ; */
+  /* background-size: 100% 30%; */
+  height: 40vh;
+}
+.flex-item {
+  background-color: transparent;
+  width: 90vh;
+  height: 30vh;
+  padding-top: 30vh;
+  padding-left: 50vh;
+}
+.flex-item2 {
+  background-color: transparent;
+  width: 300px;
+  height: 30vh;
+  padding-right: 390px;
+  padding-top: 35vh;
+}
+.flex-top {
+  background-color: transparent;
+  padding-bottom: 5px;
+}
+.flex-bottom {
+  background-color: white;
+  padding: 20px;
+  width: 45vh;
+  font-size: 14px;
+  padding-top: 0vh;
+  border-radius: 2%;
+}
+.flex-container2 {
+  display: flex;
+  justify-content: stretch;
+  flex-direction: column;
 }
